--- a/week11.ipynb
+++ b/week11.ipynb
@@ -6,7 +6,7 @@
       "name": "week11.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRutvoRfCNg5er1e059wNW",
+      "authorship_tag": "ABX9TyMW9MAA72P76JlOA5qf5hw5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,10 +112,129 @@
     {
       "cell_type": "code",
       "source": [
+        "from __future__ import print_function\n",
+        "import sys\n",
+        "\n",
+        "## [global_variables]\n",
+        "use_mask = False\n",
+        "img = ('/content/drive/MyDrive/Images/Object Detection/cats_and_bunnies.jpg')\n",
+        "templ = ('/content/drive/MyDrive/Images/Object Detection/cat2_templatejpg.jpg')\n",
+        "mask = None\n",
+        "image_window = \"Source Image\"\n",
+        "result_window = \"Result window\"\n",
+        "\n",
+        "match_method = 0\n",
+        "max_Trackbar = 5\n",
+        "\n",
+        "## [global_variables]\n",
+        "\n",
+        "def main(argv):\n",
+        "\n",
+        "    if (len(sys.argv) < 3):\n",
+        "        print('Parameter Tidak cukup')\n",
+        "        print('Usage:\\nmatch_template_demo.py <nama_gambar> <nama_template> [<nama_mask>]')\n",
+        "        return -1\n",
+        "\n",
+        "    ## [load_image]\n",
+        "    global img\n",
+        "    global templ\n",
+        "    img = cv.imread(sys.argv[1], cv.IMREAD_COLOR)\n",
+        "    templ = cv.imread(sys.argv[2], cv.IMREAD_COLOR)\n",
+        "\n",
+        "    if (len(sys.argv) > 3):\n",
+        "        global use_mask\n",
+        "        use_mask = True\n",
+        "        global mask\n",
+        "        mask = cv.imread( sys.argv[3], cv.IMREAD_COLOR )\n",
+        "\n",
+        "    if ((img is None) or (templ is None) or (use_mask and (mask is None))):\n",
+        "        print('tidak bisa membaca gambar')\n",
+        "        return -1\n",
+        "    ## [load_image]\n",
+        "\n",
+        "    ## [create_windows]\n",
+        "    cv.namedWindow( image_window, cv.WINDOW_AUTOSIZE )\n",
+        "    cv.namedWindow( result_window, cv.WINDOW_AUTOSIZE )\n",
+        "    ## [create_windows]\n",
+        "\n",
+        "    ## [create_trackbar]\n",
+        "    trackbar_label = 'Method: \\n 0: SQDIFF \\n 1: SQDIFF NORMED \\n 2: TM CCORR \\n 3: TM CCORR NORMED \\n 4: TM COEFF \\n 5: TM COEFF NORMED'\n",
+        "    cv.createTrackbar( trackbar_label, image_window, match_method, max_Trackbar, MatchingMethod )\n",
+        "    ## [create_trackbar]\n",
+        "\n",
+        "    MatchingMethod(match_method)\n",
+        "\n",
+        "    ## [wait_key]\n",
+        "    cv.waitKey(0)\n",
+        "    return 0\n",
+        "    ## [wait_key]\n",
+        "\n",
+        "def MatchingMethod(param):\n",
+        "\n",
+        "    global match_method\n",
+        "    match_method = param\n",
+        "\n",
+        "    ## [copy_source]\n",
+        "    img_display = img.copy()\n",
+        "    ## [copy_source]\n",
+        "    ## [match_template]\n",
+        "    method_accepts_mask = (cv.TM_SQDIFF == match_method or match_method == cv.TM_CCORR_NORMED)\n",
+        "    if (use_mask and method_accepts_mask):\n",
+        "        result = cv.matchTemplate(img, templ, match_method, None, mask)\n",
+        "    else:\n",
+        "        result = cv.matchTemplate(img, templ, match_method)\n",
+        "    ## [match_template]\n",
+        "\n",
+        "    ## [normalize]\n",
+        "    cv.normalize( result, result, 0, 1, cv.NORM_MINMAX, -1 )\n",
+        "    ## [normalize]\n",
+        "    ## [best_match]\n",
+        "    _minVal, _maxVal, minLoc, maxLoc = cv.minMaxLoc(result, None)\n",
+        "    ## [best_match]\n",
+        "\n",
+        "    ## [match_loc]\n",
+        "    if (match_method == cv.TM_SQDIFF or match_method == cv.TM_SQDIFF_NORMED):\n",
+        "        matchLoc = minLoc\n",
+        "    else:\n",
+        "        matchLoc = maxLoc\n",
+        "    ## [match_loc]\n",
+        "\n",
+        "    ## [imshow]\n",
+        "    cv.rectangle(img_display, matchLoc, (matchLoc[0] + templ.shape[0], matchLoc[1] + templ.shape[1]), (0,0,0), 2, 8, 0 )\n",
+        "    cv.rectangle(result, matchLoc, (matchLoc[0] + templ.shape[0], matchLoc[1] + templ.shape[1]), (0,0,0), 2, 8, 0 )\n",
+        "    cv.imshow(image_window, img_display)\n",
+        "    cv.imshow(result_window, result)\n",
+        "    ## [imshow]\n",
+        "    pass\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main(sys.argv[1:])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U_fOFC2WyO52",
+        "outputId": "d4c47165-685c-4c92-a768-932ff232ebc7"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tidak bisa membaca gambar\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "U_fOFC2WyO52"
+        "id": "NUIJBetm28iE"
       },
       "execution_count": null,
       "outputs": []
